--- a/frontend/src/app/components/homepage/homepage.component.html
+++ b/frontend/src/app/components/homepage/homepage.component.html
@@ -1,1 +1,138 @@
-<p>homepage works!</p>
+<html>
+ 
+  <body>
+    <div class="relative flex h-auto min-h-screen w-full flex-col bg-slate-50 group/design-root overflow-x-hidden" style='font-family: "Work Sans", "Noto Sans", sans-serif;'>
+      <div class="layout-container flex h-full grow flex-col">
+        <div class="px-40 flex flex-1 justify-center py-5">
+          <div class="layout-content-container flex flex-col max-w-[960px] flex-1">
+            <div class="@container">
+              <div class="@[480px]:p-4">
+                <div
+                  class="flex min-h-[480px] flex-col gap-6 bg-cover bg-center bg-no-repeat @[480px]:gap-8 @[480px]:rounded-lg items-start justify-end px-4 pb-10 @[480px]:px-10"
+                  style='background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.4) 100%), url("https://lh3.googleusercontent.com/aida-public/AB6AXuCVJ5wgxb3ohUYySm8uRnHD5DTNY-nHiIspVT7S3FlRGC0n2U7cyuarpZQ55p53mtKdlLcWoe0jGJB17hoULuqLVVFBiMiTwsFdSghpavJK2PXZztFvNPQ1TmA7rscGALh1p9i4AtCLz4iwA_Fs2qpY1hSm2G0aloZSbz_KFPkWE1MUrfhW-4zc4wmeTbrZanDE3_2jT7OI4gKN34TotL1ZgODmlyxN4YcWUQenZd2GydbDShUAsJeGzH9G0ZCGHM20IfBSQBmN0kRy");'
+                >
+                  <div class="flex flex-col gap-2 text-left">
+                    <h1
+                      class="text-white text-4xl font-black leading-tight tracking-[-0.033em] @[480px]:text-5xl @[480px]:font-black @[480px]:leading-tight @[480px]:tracking-[-0.033em]"
+                    >
+                      Discover the Latest Trends
+                    </h1>
+                    <h2 class="text-white text-sm font-normal leading-normal @[480px]:text-base @[480px]:font-normal @[480px]:leading-normal">
+                      Explore our curated collection of fashion, home goods, and more. Find your style and elevate your everyday.
+                    </h2>
+                  </div>
+                  <button
+                    class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 @[480px]:h-12 @[480px]:px-5 bg-[#1193d4] text-slate-50 text-sm font-bold leading-normal tracking-[0.015em] @[480px]:text-base @[480px]:font-bold @[480px]:leading-normal @[480px]:tracking-[0.015em]"
+                  >
+                    <span class="truncate">Shop Now</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <h2 class="text-[#0d171b] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Featured Products</h2>
+            <div class="flex overflow-y-auto [-ms-scrollbar-style:none] [scrollbar-width:none] [&amp;::-webkit-scrollbar]:hidden">
+              <div class="flex items-stretch p-4 gap-3">
+                <div class="flex h-full flex-1 flex-col gap-4 rounded-lg min-w-60">
+                  <div
+                    class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-lg flex flex-col"
+                    style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDo_9GarCZ4BMehoUFerBW28er74n1nSndcTmkQpurbuiQGVSLATHnIVvIfAmQzHJ6_MavWcseTfW3BA233OhuEsHEQA5_WBhx3AvHRs4Bipc1GsLsfqJ1ZAgVl81-ldkgOtwIbuhJYWPXDqnduAj-xP0masLPfi556NqIDLDqlqbaMtGJp5QmQavAXslSQ4RZslcpSQML5w824Zv3RXCUT2XxpTnOcKpe6bVIEXX8l0TmfJzfdGJr8BByF_MmXVFylplwOs6o6ePsh");'
+                  ></div>
+                  <div>
+                    <p class="text-[#0d171b] text-base font-medium leading-normal">The Serenity Sofa</p>
+                    <p class="text-[#4c809a] text-sm font-normal leading-normal">Sink into comfort with our plush, modern sofa.</p>
+                  </div>
+                </div>
+                <div class="flex h-full flex-1 flex-col gap-4 rounded-lg min-w-60">
+                  <div
+                    class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-lg flex flex-col"
+                    style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCjZEdZxCHTzGImN2V7gVD5MednMpKADttnh8V72vLIP_jDpgubhf-qNfRlKXYwg9fdtwPqpxbHfx3HoMjFhPsrUrOuuzZN4DHRtWPtFLM01BloPuvUmwgRN4ocrucl9oZ0wq1Q3rReyOKz5xw79X51WJuXHkegxQvgnr-37jAW7FWGteOXb3SIvsOZuagdchLicrlnpwaEX4hvv_Nl-U9B-sfO2VDp9otIsenAft6xHo81SjgqWr5N0USmnWumAZ-PWHvQwtgUNwZl");'
+                  ></div>
+                  <div>
+                    <p class="text-[#0d171b] text-base font-medium leading-normal">The Gather Dining Table</p>
+                    <p class="text-[#4c809a] text-sm font-normal leading-normal">Gather around our elegant dining table for memorable meals.</p>
+                  </div>
+                </div>
+                <div class="flex h-full flex-1 flex-col gap-4 rounded-lg min-w-60">
+                  <div
+                    class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-lg flex flex-col"
+                    style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCtmXi6s43LrX8x7lfO7zIs-0Z6Gk2B6DSoqa9jWzuT_WXw7cN4GKD_YW_Pza3ZVNLdyE6q2FylcXQuXVkSgZW1vax4ln-b-W9M8qqkKxBGmac7Aiy6fRnOGEjd8wMDbsZCaashuHCKa5K3eBEtG-NsxsUrmqoYbluVr8U4E6FMSKNpWnpqVelkG1_N7eOSZDa2Z9a6iGUg5TkGogK9N0CNZUVLRF3e2sjWt6aXGFxc5nL6twlii3DI_Dtxn742HGwabMmyqgtqVFLO");'
+                  ></div>
+                  <div>
+                    <p class="text-[#0d171b] text-base font-medium leading-normal">The Comfort Armchair</p>
+                    <p class="text-[#4c809a] text-sm font-normal leading-normal">Relax in style with our cozy and chic armchair.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <h2 class="text-[#0d171b] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Shop by Category</h2>
+            <div class="grid grid-cols-[repeat(auto-fit,minmax(158px,1fr))] gap-3 p-4">
+              <div class="flex flex-col gap-3 pb-3">
+                <div
+                  class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-lg"
+                  style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDy2earfxmjOZx3sUn3rwQP-0TWWvuAkXO8S0Loa8n8iFyLkzSGMNcGLPHOupRhMYlTdX4EKoDbysO0tvhGYUSMDHOKXRH4RGk1NaZs84PEoJGXlcsfXCMA2gRxz3OSYhteQLHMGQTuhMlRftcNC7tvT8UV3qBdsAgBLHNLcxrKkzGCaFoYaHUS6THfN3LaOWJs1krM5Ow4pRKRUeJP__Yf7bNM57rz2U31MrhZRx6wwwUtfoK-YR8bsZ6D3mq3vAWQrYDFP3b81uN1");'
+                ></div>
+                <p class="text-[#0d171b] text-base font-medium leading-normal">Clothing</p>
+              </div>
+              <div class="flex flex-col gap-3 pb-3">
+                <div
+                  class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-lg"
+                  style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCpmbD6fSrN4tjr09U0QdSu4BJzl-B7NmIdoef0c42DakEKZs2_Uwe8zIntpesLk2vUzzrl4ld_a4Y8KvxG_UNAxYNiIp08yvV-ItvRZTwGF1JzkOgBQMSQeJZF0u90UhVjidaAS8j4gPYyD9G4SHvIBk8yWLlE90KBt62NMYD1EB97ViQuvRJabHNR--LfFL_XYQ4gGINHkfpiq-9mgFnYL12aaSmuByqFlxgjBAFVFaR0zjCk4lxZYAZHArRfHbXmsKMRRfRvgDVz");'
+                ></div>
+                <p class="text-[#0d171b] text-base font-medium leading-normal">Home Goods</p>
+              </div>
+              <div class="flex flex-col gap-3 pb-3">
+                <div
+                  class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-lg"
+                  style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDGvTnnX1tvCSwnkIVQGOb8VF-MF_Me1T-vWbL8SetwIcwXLvOeCdxSTrICxBOzrHYBDRkVHzh3Dy8Zcs_3kxmvAPNGXPuTwwf-OEzBEOedBqzhvntO2eGUVJx08RHgtf-MaV5_7LnJqnwnOvYnoEVltEhUYV7dzcn1DX0lxES3kLa-e0zaaN2dosY-JzP90fg8l3K2NYmvN1hoIU5N7nf_dzMIiCcrRvtRUp4SsdDSq-hSYzhCEkOJUzzRVfzI6LxRl16_HjQqag6f");'
+                ></div>
+                <p class="text-[#0d171b] text-base font-medium leading-normal">Accessories</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <footer class="flex justify-center">
+          <div class="flex max-w-[960px] flex-1 flex-col">
+            <footer class="flex flex-col gap-6 px-5 py-10 text-center @container">
+              <div class="flex flex-wrap items-center justify-center gap-6 @[480px]:flex-row @[480px]:justify-around">
+                <a class="text-[#4c809a] text-base font-normal leading-normal min-w-40" href="#">About Us</a>
+                <a class="text-[#4c809a] text-base font-normal leading-normal min-w-40" href="#">Contact</a>
+                <a class="text-[#4c809a] text-base font-normal leading-normal min-w-40" href="#">FAQ</a>
+                <a class="text-[#4c809a] text-base font-normal leading-normal min-w-40" href="#">Returns &amp; Exchanges</a>
+              </div>
+              <div class="flex flex-wrap justify-center gap-4">
+                <a href="#">
+                  <div class="text-[#4c809a]" data-icon="TwitterLogo" data-size="24px" data-weight="regular">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
+                      <path
+                        d="M247.39,68.94A8,8,0,0,0,240,64H209.57A48.66,48.66,0,0,0,168.1,40a46.91,46.91,0,0,0-33.75,13.7A47.9,47.9,0,0,0,120,88v6.09C79.74,83.47,46.81,50.72,46.46,50.37a8,8,0,0,0-13.65,4.92c-4.31,47.79,9.57,79.77,22,98.18a110.93,110.93,0,0,0,21.88,24.2c-15.23,17.53-39.21,26.74-39.47,26.84a8,8,0,0,0-3.85,11.93c.75,1.12,3.75,5.05,11.08,8.72C53.51,229.7,65.48,232,80,232c70.67,0,129.72-54.42,135.75-124.44l29.91-29.9A8,8,0,0,0,247.39,68.94Zm-45,29.41a8,8,0,0,0-2.32,5.14C196,166.58,143.28,216,80,216c-10.56,0-18-1.4-23.22-3.08,11.51-6.25,27.56-17,37.88-32.48A8,8,0,0,0,92,169.08c-.47-.27-43.91-26.34-44-96,16,13,45.25,33.17,78.67,38.79A8,8,0,0,0,136,104V88a32,32,0,0,1,9.6-22.92A30.94,30.94,0,0,1,167.9,56c12.66.16,24.49,7.88,29.44,19.21A8,8,0,0,0,204.67,80h16Z"
+                      ></path>
+                    </svg>
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="text-[#4c809a]" data-icon="InstagramLogo" data-size="24px" data-weight="regular">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
+                      <path
+                        d="M128,80a48,48,0,1,0,48,48A48.05,48.05,0,0,0,128,80Zm0,80a32,32,0,1,1,32-32A32,32,0,0,1,128,160ZM176,24H80A56.06,56.06,0,0,0,24,80v96a56.06,56.06,0,0,0,56,56h96a56.06,56.06,0,0,0,56-56V80A56.06,56.06,0,0,0,176,24Zm40,152a40,40,0,0,1-40,40H80a40,40,0,0,1-40-40V80A40,40,0,0,1,80,40h96a40,40,0,0,1,40,40ZM192,76a12,12,0,1,1-12-12A12,12,0,0,1,192,76Z"
+                      ></path>
+                    </svg>
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="text-[#4c809a]" data-icon="FacebookLogo" data-size="24px" data-weight="regular">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
+                      <path
+                        d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm8,191.63V152h24a8,8,0,0,0,0-16H136V112a16,16,0,0,1,16-16h16a8,8,0,0,0,0-16H152a32,32,0,0,0-32,32v24H96a8,8,0,0,0,0,16h24v63.63a88,88,0,1,1,16,0Z"
+                      ></path>
+                    </svg>
+                  </div>
+                </a>
+              </div>
+              <p class="text-[#4c809a] text-base font-normal leading-normal">2024 ShopSmart. All rights reserved.</p>
+            </footer>
+          </div>
+        </footer>
+      </div>
+    </div>
+  </body>
+</html>
