feat: implement signup and login functionality, update response handler, and enhance login component

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -49,33 +49,32 @@
               </div>
             </p-tabPanel>
             <p-tabPanel header="Signup">
-               <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
-                <label class="flex flex-col min-w-40 flex-1">
-                  <p class="text-[#0d171b] text-base font-medium leading-normal pb-2">Email</p>
-                  <input placeholder="Enter your email"
-                    class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#0d171b] focus:outline-0 focus:ring-0 border border-[#cfdfe7] bg-slate-50 focus:border-[#cfdfe7] h-14 placeholder:text-[#4c809a] p-[15px] text-base font-normal leading-normal"
-                    value="" />
-                </label>
-              </div>
-              <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
-                <label class="flex flex-col min-w-40 flex-1">
-                  <p class="text-[#0d171b] text-base font-medium leading-normal pb-2">Password</p>
-                  <input placeholder="Enter your password"
-                    class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#0d171b] focus:outline-0 focus:ring-0 border border-[#cfdfe7] bg-slate-50 focus:border-[#cfdfe7] h-14 placeholder:text-[#4c809a] p-[15px] text-base font-normal leading-normal"
-                    value="" />
-                </label>
-              </div>
-              <div class="flex px-4 py-3">
-                <button
-                  class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 flex-1 bg-[#1193d4] text-slate-50 text-sm font-bold leading-normal tracking-[0.015em]">
-                  <span class="truncate">Sign Up</span>
-                </button>
-              </div>
-
+              <form (ngSubmit)='onSubmit()' [formGroup]="authForm">
+                <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
+                  <label class="flex flex-col min-w-40 flex-1">
+                    <p class="text-[#0d171b] text-base font-medium leading-normal pb-2">Email</p>
+                    <input placeholder="Enter your email" formControlName="email"
+                      class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#0d171b] focus:outline-0 focus:ring-0 border border-[#cfdfe7] bg-slate-50 focus:border-[#cfdfe7] h-14 placeholder:text-[#4c809a] p-[15px] text-base font-normal leading-normal"
+                      value="" />
+                  </label>
+                </div>
+                <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
+                  <label class="flex flex-col min-w-40 flex-1">
+                    <p class="text-[#0d171b] text-base font-medium leading-normal pb-2">Password</p>
+                    <input placeholder="Enter your password" formControlName="password"
+                      class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#0d171b] focus:outline-0 focus:ring-0 border border-[#cfdfe7] bg-slate-50 focus:border-[#cfdfe7] h-14 placeholder:text-[#4c809a] p-[15px] text-base font-normal leading-normal"
+                      value="" />
+                  </label>
+                </div>
+                <div class="flex px-4 py-3">
+                  <button type="submit"
+                    class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 flex-1 bg-[#1193d4] text-slate-50 text-sm font-bold leading-normal tracking-[0.015em]">
+                    <span class="truncate">Sign Up</span>
+                  </button>
+                </div>
+              </form>
             </p-tabPanel>
           </p-tabView>
-
-
         </div>
       </div>
     </div>
