--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -8,45 +8,48 @@
         <div class="layout-content-container flex flex-col w-[512px] max-w-[512px] py-5 max-w-[960px] flex-1">
           <h2 class="text-[#0d171b] tracking-light text-[28px] font-bold leading-tight px-4 text-center pb-3 pt-5">
             Welcome to Gadgetly</h2>
-          <p-tabView>
+          <p-tabView [(activeIndex)]="activeTabIndex">
             <p-tabPanel header="Login">
-              <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
-                <label class="flex flex-col min-w-40 flex-1">
-                  <p class="text-[#0d171b] text-base font-medium leading-normal pb-2">Email</p>
-                  <input placeholder="Enter your email"
-                    class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#0d171b] focus:outline-0 focus:ring-0 border border-[#cfdfe7] bg-slate-50 focus:border-[#cfdfe7] h-14 placeholder:text-[#4c809a] p-[15px] text-base font-normal leading-normal"
-                    value="" />
-                </label>
-              </div>
-              <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
-                <label class="flex flex-col min-w-40 flex-1">
-                  <p class="text-[#0d171b] text-base font-medium leading-normal pb-2">Password</p>
-                  <input placeholder="Enter your password"
-                    class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#0d171b] focus:outline-0 focus:ring-0 border border-[#cfdfe7] bg-slate-50 focus:border-[#cfdfe7] h-14 placeholder:text-[#4c809a] p-[15px] text-base font-normal leading-normal"
-                    value="" />
-                </label>
-              </div>
-              <p class="text-[#4c809a] text-sm font-normal leading-normal pb-3 pt-1 px-4 underline">Forgot password?</p>
-              <div class="flex px-4 py-3">
-                <button
-                  class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 flex-1 bg-[#1193d4] text-slate-50 text-sm font-bold leading-normal tracking-[0.015em]">
-                  <span class="truncate">Login</span>
-                </button>
-              </div>
-              <p class="text-[#4c809a] text-sm font-normal leading-normal pb-3 pt-1 px-4 text-center">Or continue with
-              </p>
-              <div class="flex justify-center">
-                <div class="flex flex-1 gap-3 flex-wrap px-4 py-3 max-w-[480px] justify-center">
-                  <button
-                    class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#e7eff3] text-[#0d171b] text-sm font-bold leading-normal tracking-[0.015em] grow">
-                    <span class="truncate">Continue with SocialApp</span>
-                  </button>
-                  <button
-                    class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#e7eff3] text-[#0d171b] text-sm font-bold leading-normal tracking-[0.015em] grow">
-                    <span class="truncate">Continue with ChatApp</span>
+              <form (ngSubmit)="onLogin()" [formGroup]='authForm'>
+                <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
+                  <label class="flex flex-col min-w-40 flex-1">
+                    <p class="text-[#0d171b] text-base font-medium leading-normal pb-2">Email</p>
+                    <input placeholder="Enter your email" formControlName="email"
+                      class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#0d171b] focus:outline-0 focus:ring-0 border border-[#cfdfe7] bg-slate-50 focus:border-[#cfdfe7] h-14 placeholder:text-[#4c809a] p-[15px] text-base font-normal leading-normal"
+                      value="" />
+                  </label>
+                </div>
+                <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
+                  <label class="flex flex-col min-w-40 flex-1">
+                    <p class="text-[#0d171b] text-base font-medium leading-normal pb-2">Password</p>
+                    <input placeholder="Enter your password" formControlName="password"
+                      class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#0d171b] focus:outline-0 focus:ring-0 border border-[#cfdfe7] bg-slate-50 focus:border-[#cfdfe7] h-14 placeholder:text-[#4c809a] p-[15px] text-base font-normal leading-normal"
+                      value="" />
+                  </label>
+                </div>
+                <p class="text-[#4c809a] text-sm font-normal leading-normal pb-3 pt-1 px-4 underline">Forgot password?
+                </p>
+                <div class="flex px-4 py-3">
+                  <button type="submit"
+                    class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 flex-1 bg-[#1193d4] text-slate-50 text-sm font-bold leading-normal tracking-[0.015em]">
+                    <span class="truncate">Login</span>
                   </button>
                 </div>
-              </div>
+                <p class="text-[#4c809a] text-sm font-normal leading-normal pb-3 pt-1 px-4 text-center">Or continue with
+                </p>
+                <div class="flex justify-center">
+                  <div class="flex flex-1 gap-3 flex-wrap px-4 py-3 max-w-[480px] justify-center">
+                    <button
+                      class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#e7eff3] text-[#0d171b] text-sm font-bold leading-normal tracking-[0.015em] grow">
+                      <span class="truncate">Continue with SocialApp</span>
+                    </button>
+                    <button
+                      class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#e7eff3] text-[#0d171b] text-sm font-bold leading-normal tracking-[0.015em] grow">
+                      <span class="truncate">Continue with ChatApp</span>
+                    </button>
+                  </div>
+                </div>
+              </form>
             </p-tabPanel>
             <p-tabPanel header="Signup">
               <form (ngSubmit)='onSubmit()' [formGroup]="authForm">
